updates for menu z-indexing issue

--- a/src/styles/_Variables.scss
+++ b/src/styles/_Variables.scss
@@ -3,6 +3,7 @@ $default-teal: teal;
 $default-error-red: rgb(212, 5, 5);
 $default-light-gray: rgb(218, 214, 214);
 $default-linear-gradient: rgba(255, 255, 255, 0.67);
+$default-whitesmoke: whitesmoke;
 
 // spacing
 $default-container-margin: 50px;
