--- a/src/styles/pages/home/Home.scss
+++ b/src/styles/pages/home/Home.scss
@@ -23,18 +23,21 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 95%;
+  width: 100%;
 }
 
 .gradient {
-  background-image: linear-gradient(to right, transparent, $default-linear-gradient);
+  background-image: linear-gradient(
+    to right,
+    transparent,
+    $default-linear-gradient
+  );
   height: 100%;
   position: absolute;
   width: 100%;
 }
 
 .img-main {
-  border-radius: 5em;
   height: 100%;
   object-fit: cover;
   width: 100%;
