--- a/src/styles/pages/imageGallery/ImageGallery.scss
+++ b/src/styles/pages/imageGallery/ImageGallery.scss
@@ -22,6 +22,8 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
   justify-content: center;
   margin: $default-container-margin-top-bottom;
   flex: 1;
+  position: relative;
+  z-index: 0;
 }
 
 .image-gallery-thumbnails-wrapper {
@@ -38,7 +40,7 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
   cursor: pointer;
   outline: none;
   position: absolute;
-  z-index: 4;
+  z-index: 1;
   filter: drop-shadow($ig-shadow);
 
   @media (hover: hover) and (pointer: fine) {
